--- a/src/app/goal/goal.component.html
+++ b/src/app/goal/goal.component.html
@@ -2,9 +2,11 @@
     <h1>My goals</h1>
     <hr>
     <ul>
-        <li *ngFor='let goal of goals'>
-            {{ goal.name }}
-            <app-goal-detail [goal]='goal'></app-goal-detail>
-        </li>
-    </ul>
-</div>
+        <div *ngFor='let goal of goals;let i = index'>
+            <li>{{goal.name}}</li>
+            <button (click)='toggleDetails(i)'>Toggle Details</button>
+            <app-goal-detail *ngIf='goal.showDescription' [goal]='goal' (isComplete) = 'completeGoal($event,i)'></app-goal-detail>
+          </div>
+        </ul>
+        <p *ngIf='goals.length > 5'>You have too many goals</p>  
+</div> 
